--- a/cards-prod.yaml
+++ b/cards-prod.yaml
@@ -2,9 +2,10 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to PersonalBank cards related Prod APIs "
+  message: "Welcome to PersonalBank cards related production APIs "
   contactDetails:
     name: "Khaoula KARAOUD- Product Owner"
     email: "khaoula.karaoud@gmail.com"
   onCallSupport:
     -(0033) 611980545
+
