--- a/loans-prod.yaml
+++ b/loans-prod.yaml
@@ -2,12 +2,13 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to PersonalBank loans related production APIs "
+  message: "Welcome to PersonalBank loans related prod APIs "
   contactDetails:
     name: "Khaoula KARAOUD- Product Owner"
     email: "khaoula.karaoud@gmail.com"
   onCallSupport:
     -(0033) 611980545
+
 
 
 
