--- a/cards-prod.yaml
+++ b/cards-prod.yaml
@@ -2,12 +2,13 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to PersonalBank cards related production APIs "
+  message: "Welcome to PersonalBank cards related prod APIs "
   contactDetails:
     name: "Khaoula KARAOUD- Product Owner"
     email: "khaoula.karaoud@gmail.com"
   onCallSupport:
     -(0033) 611980545
+
 
 
 
